# adv-rag-app-v2

./: .gitignore  README.md  agents.py  app.py  aws_services.py  data_sources.py  docker-compose.yml  document_service.py  memory_manager.py  models.py  monitoring.py  pyproject.toml  query_classifier.py  vector_store.py
.github/workflows/: ci.yml
attached_assets/: Pasted-Key-Features-Implementation-1-Query-Classification-Routing-Decision-Uses-LangChain-Classifier-t-1744046526112.txt
backend/: Dockerfile  TESTING.md  main.py  requirements.txt  test_dynamodb.py  test_integrations.py  test_langfuse.py
backend/app/: data_sources.py  database.py  document_service.py  main.py  models.py  monitoring.py  pinecone_service.py  query_classifier.py  schemas.py  services.py  vector_store.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: base.py  models.py
backend/app/services/: __init__.py  monitoring_service.py
backend/app/static/: __init__.py
backend/app/static/css/: style.css
backend/app/templates/: __init__.py  documents.html  index.html  storage_troubleshoot.html  ticket_documents.html
backend/tests/: conftest.py
backend/tests/integration/: test_dynamodb_service.py
backend/tests/unit/: test_query_classifier.py
docs/: mlops.md
frontend/: .env.local  Dockerfile  next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx
static/data/: kb_documents.json
templates/: admin_dashboard.html  base.html  documents.html  ticket_documents.html
(+1 files in other folders)
