[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "faiss-cpu>=1.10.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-openai>=0.3.12",
    "langchain>=0.3.23",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "boto3>=1.37.28",
    "langchain-community>=0.3.21",
    "langchain-pinecone>=0.2.4",
    "langsmith>=0.3.25",
    "botocore>=1.37.28",
    "pinecone>=6.0.2",
    "langfuse>=2.60.2",
]
